--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bytemd-plugin-vim",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "ByteMD plugin to vim key map",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "scripts": {
     "build": "vite build"
   },
@@ -13,13 +13,13 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
-  "jsdelivr": "./dist/index.umd.js",
-  "unpkg": "./dist/index.umd.js",
-  "module": "./dist/index.mjs",
+  "jsdelivr": "./dist/index.umd.cjs",
+  "unpkg": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
